updating folder structure and files to suite angular2 style guide and design principles

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <!doctype>
 <html>
+
 <head>
     <base href="/">
-    <title>Angular 2 Boilerplate</title>
+    <title>Word to MD Add-in</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -16,24 +18,11 @@
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.js"></script>
 
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
-
-    <link rel="stylesheet" href="src/css/app.css">
+    <script src="system.config.js"></script>
 </head>
-<body>
-<my-app>Loading...</my-app>
 
-<script>
-    System.config({
-        packages: {
-            app: {
-                format: 'register',
-                defaultExtension: 'js'
-            }
-        }
-    });
-    System.import('app/boot')
-            .then(null, console.error.bind(console));
-</script>
+<body>
+    <word-md-addin>Loading...</word-md-addin>
 </body>
+
 </html>
