--- a/index.html
+++ b/index.html
@@ -4,23 +4,59 @@
 <head>
     <base href="/">
     <title>Word to MD Add-in</title>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- 1. Load libraries -->
-    <!-- Polyfill(s) for older browsers -->
-     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
+    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.min.css">
+    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.components.min.css">
+    <link href="www/lib/loading/spinner.css" rel="stylesheet" />
 
+    <!-- 1. Load libraries -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="www/lib/loading/fabric.spinner.js"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>        
+
+    <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    
+
+    <!-- 2. Configure SystemJS -->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-    
-    <!-- 2. Configure SystemJS -->    
     <script src="www/system.config.js"></script>
 </head>
 
 <body>
-    <word-md-addin>Loading...</word-md-addin>
+    <word-md-addin>
+        <div class="ms-notification-progress-indeterminate">
+            <main class="ms-notification-progress-indeterminate__main ms-bgColor-themePrimary ms-fontColor-white">
+                <img class="ms-notification-progress-indeterminate__logo" src="www/assets/images/logo.png" />
+                <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to Markdown Add-in</h1>
+            </main>
+            <footer class="ms-notification-progress-indeterminate__footer ms-bgColor-themePrimary ms-fontColor-white">
+                <div class="ms-progress">
+                    <div class="ms-ProgressIndicator">
+                        <div class="ms-Spinner large"></div>
+                        <div class="ms-ProgressIndicator-itemName">Loading</div>
+                        <div class="ms-ProgressIndicator-itemDescription">Downloading libraries</div>
+                    </div>
+                </div>
+            </footer>
+
+
+            <script type="text/javascript">
+                if (typeof fabric === "object") {
+                    if ('Spinner' in fabric) {
+                        var element = document.querySelector('.ms-Spinner');
+                        var component = new fabric['Spinner'](element);
+                        component.start();
+                    }
+                }
+            </script>
+        </div>
+    </word-md-addin>
 </body>
 
 </html>
