Uma added routes and played with lists api

--- a/src/assets/mock/output-simple-getHtml.html
+++ b/src/assets/mock/output-simple-getHtml.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
     <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
     <meta name=Generator content="Microsoft Word 15 (filtered)">
@@ -119,6 +121,12 @@
         sample provides two experiences: one with task pane and another with add-in
         commands. The following figures show the main screens of this add-in.</p>
 
+    <p>With Expense Trends, you can import expense transactions into the workbook,
+        create dashboard and trackers, view and analyze trends, and track special
+        transactions such as charitable donations and follow up items. The sample
+        provides two experiences: one with task pane and another with add-in commands.
+        The following figures show the main screens of this add-in.</p>
+
     <p><em>Applies to: Excel 2016, Excel for iPad, Excel for Mac</em></p>
 
     <p>![WoodGrove Bank Expense Trends Add-in - Ribbon]
@@ -134,6 +142,9 @@
 
     <p class=MsoNormal style='margin-left:0in;text-indent:0in;line-height:normal'><a
             href="#additional-resources">Additional resources</a></p>
+
+    <p class=MsoNormal style='margin-left:0in;text-indent:0in;line-height:normal'><a
+            href="http://www.bing.com/">FAQ</a></p>
 
     <h2 id=prerequisites>Prerequisites</h2>
 
@@ -188,6 +199,17 @@
             <td style='padding:.75pt .75pt .75pt .75pt'>
                 <p class=MsoNormal>Gets the text of the body. Use the insertText method to
                     insert text. Read-only.</p>
+            </td>
+        </tr>
+        <tr>
+            <td style='padding:.75pt .75pt .75pt .75pt'>
+                <p class=MsoNormal>name</p>
+            </td>
+            <td style='padding:.75pt .75pt .75pt .75pt'>
+                <p class=MsoNormal>string</p>
+            </td>
+            <td style='padding:.75pt .75pt .75pt .75pt'>
+                <p class=MsoNormal>Gets the name of the element.</p>
             </td>
         </tr>
     </table>
@@ -308,6 +330,8 @@
         server requirements, see <a
                 href="https://msdn.microsoft.com/EN-US/library/office/dn833104.aspx">Requirements
             for running Office Add-ins</a>.</p>
+
+    <p>&nbsp;</p>
 
     <p class=MsoNormal>&nbsp;</p>
 
