--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
     <!-- 1. Load libraries -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="www/lib/loading/fabric.spinner.js"></script>
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>        
+    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>        -->
+    <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
 
-    <!-- Polyfill(s) for older browsers -->
+    <!--2. Polyfill(s) for older browsers -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
 
-    <!-- 2. Configure SystemJS -->
+    <!-- 3. Configure SystemJS -->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="www/system.config.js"></script>
+
 </head>
 
 <body>
