--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
@@ -11,12 +11,11 @@
 
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.min.css">
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.components.min.css">
-    <link href="www/lib/loading/spinner.css" rel="stylesheet" />
+    <link href="lib/loading/spinner.css" rel="stylesheet" />
 
     <!-- 1. Load libraries -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="www/lib/loading/fabric.spinner.js"></script>
-    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>        -->
+    <script src="lib/loading/fabric.spinner.js"></script>
     <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
 
     <!--2. Polyfill(s) for older browsers -->
@@ -26,7 +25,7 @@
 
     <!-- 3. Configure SystemJS -->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="www/system.config.js"></script>
+    <script src="system.config.js"></script>
 
 </head>
 
