--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
@@ -14,19 +14,18 @@
     <link href="lib/loading/spinner.css" rel="stylesheet" />
 
     <!-- 1. Load libraries -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="lib/loading/fabric.spinner.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
+    <script src="lib/loading/fabric.spinner.js"></script>
 
     <!--2. Polyfill(s) for older browsers -->
-    <script src="node_modules/es6-shim/es6-shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="https://npmcdn.com/core-js/client/shim.min.js"></script>
+    <script src="https://npmcdn.com/zone.js@0.6.12?main=browser"></script>
+    <script src="https://npmcdn.com/reflect-metadata@0.1.3"></script>
+    <script src="https://npmcdn.com/systemjs@0.19.27/dist/system.src.js"></script>
 
     <!-- 3. Configure SystemJS -->
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="system.config.js"></script>
-
 </head>
 
 <body>
