updating ignore files

--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
@@ -32,7 +32,7 @@
     <word-md-addin>
         <div class="ms-notification-progress-indeterminate">
             <main class="ms-notification-progress-indeterminate__main ms-bgColor-themePrimary ms-fontColor-white">
-                <img class="ms-notification-progress-indeterminate__logo" src="www/assets/images/logo.png" />
+                <img class="ms-notification-progress-indeterminate__logo" src="assets/images/logo.png" />
                 <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to Markdown Add-in</h1>
             </main>
             <footer class="ms-notification-progress-indeterminate__footer ms-bgColor-themePrimary ms-fontColor-white">
