--- a/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
+++ b/Word-Addin-Ang2-Word-to-MDWeb/src/index.html
@@ -33,7 +33,7 @@
         <div class="ms-notification-progress-indeterminate">
             <main class="ms-notification-progress-indeterminate__main ms-bgColor-themePrimary ms-fontColor-white">
                 <img class="ms-notification-progress-indeterminate__logo" src="assets/images/logo.png" />
-                <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to Markdown Add-in</h1>
+                <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to Markdown Addin</h1>
             </main>
             <footer class="ms-notification-progress-indeterminate__footer ms-bgColor-themePrimary ms-fontColor-white">
                 <div class="ms-progress">
