--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href="/">
-    <title>Word to MD Add-in</title>
+    <title>Word to GitHub</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -33,14 +33,14 @@
         <div class="ms-notification-progress-indeterminate">
             <main class="ms-notification-progress-indeterminate__main ms-bgColor-themePrimary ms-fontColor-white">
                 <img class="ms-notification-progress-indeterminate__logo" src="assets/images/logo.png" />
-                <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to Markdown Addin</h1>
+                <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to GitHub</h1>
             </main>
             <footer class="ms-notification-progress-indeterminate__footer ms-bgColor-themePrimary ms-fontColor-white">
                 <div class="ms-progress">
                     <div class="ms-ProgressIndicator">
                         <div class="ms-Spinner large"></div>
                         <div class="ms-ProgressIndicator-itemName">Loading</div>
-                        <div class="ms-ProgressIndicator-itemDescription">Downloading libraries</div>
+                        <div class="ms-ProgressIndicator-itemDescription">Fetching libraries</div>
                     </div>
                 </div>
             </footer>
