basic flows completed and stablizied

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 0. Basic dependencies -->
-    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
+    <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
 
