--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 0. Basic dependencies -->
-    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
+    <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
 
@@ -20,9 +20,9 @@
     <script src="node_modules/office-ui-fabric/dist/js/jquery.fabric.min.js"></script>
 
     <!--2. Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+    <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
 
