--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -18,6 +18,7 @@
     <link href="lib/loading/spinner.css" rel="stylesheet" />
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/office-ui-fabric/dist/js/jquery.fabric.min.js"></script>
+    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>
 
     <!--2. Polyfill(s) for older browsers -->
     <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
