--- a/WordToGitHub/src/preview.html
+++ b/WordToGitHub/src/preview.html
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-    <div class="ms-notification-progress-indeterminate">
+    <div class="ms-notification-progress-indeterminate" id="spinnerContainer">
         <main class="ms-notification-progress-indeterminate__main ms-bgColor-themePrimary ms-fontColor-white">
             <img class="ms-notification-progress-indeterminate__logo" src="assets/images/logo.png" />
             <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to GitHub</h1>
@@ -74,6 +74,9 @@
                 }
             }
         </script>
+    </div>
+    <div id="previewContainer" style="font-size: 11pt;">
+        <pre id="preview"></pre>
     </div>
 </body>
 </html>
