--- a/WordToGitHub/src/authorize.html
+++ b/WordToGitHub/src/authorize.html
@@ -52,11 +52,11 @@
 
 <body>
     <div class="ms-notification-progress-indeterminate">
-        <main class="ms-notification-progress-indeterminate__main ms-bgColor-themePrimary ms-fontColor-white">
+        <main class="ms-notification-progress-indeterminate__main ms-fontColor-white">
             <img class="ms-notification-progress-indeterminate__logo" src="assets/images/logo.png" />
             <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to GitHub</h1>
         </main>
-        <footer class="ms-notification-progress-indeterminate__footer ms-bgColor-themePrimary ms-fontColor-white">
+        <footer class="ms-notification-progress-indeterminate__footer ms-fontColor-white">
             <div class="ms-progress">
                 <div class="ms-ProgressIndicator">
                     <div class="ms-Spinner large"></div>
