--- a/WordToGitHub/src/authorize.html
+++ b/WordToGitHub/src/authorize.html
@@ -12,7 +12,6 @@
     <!-- 1. Basic dependencies -->
     <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/office-ui-fabric/dist/js/jquery.fabric.min.js"></script>
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
     <link rel="stylesheet" href="common-styles.css" />
@@ -20,9 +19,6 @@
     <!-- 2. Polyfill(s) for older browsers -->
     <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
 
     <!-- 3. SystemJS Configuration -->
     <script src="configuration.js"></script>
@@ -41,7 +37,7 @@
             <footer class="ms-progress-component__footer ms-fontColor-white">
                 <div class="ms-progress">
                     <div class="ms-Spinner large"></div>
-                    <div class="ms-ProgressIndicator-itemName">Signing in...</div>
+                    <div id="status" class="ms-ProgressIndicator-itemName">Signing in...</div>
                 </div>
             </footer>
         </div>
