--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="common-styles.css" />
 
     <!-- 2. Polyfill(s) for older browsers -->
+    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>
+    <script src="assets/stringview.js"></script>
     <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
