added breadcrumbs module and routing modifications

--- a/WordToGitHub/src/authorize.html
+++ b/WordToGitHub/src/authorize.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href="/">
-    <title>Word to GitHub - Authorize</title>
+    <title>Authorize</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
