updating meta information and making names uniform

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -37,7 +37,8 @@
         <div class="ms-progress-component">
             <main class="ms-progress-component__main ms-fontColor-white">
                 <img class="ms-progress-component__logo" src="assets/images/logo.png" />
-                <h1 class="ms-firstrun-value__title ms-font-xl ms-fontColor-white ms-fontWeight-light">Word to GitHub</h1>
+                <h1 class="ms-progress-component__title ms-font-xl ms-fontColor-white ms-fontWeight-semibold">MARKDOWN EDITOR</h1>
+                <h2 class="ms-progress-component__title ms-font-l ms-fontColor-white ms-fontWeight-light">for Word</h2>
             </main>
             <footer class="ms-progress-component__footer ms-fontColor-white">
                 <div class="ms-progress">
