updating packages and removing unwanted dependencies

--- a/WordToGitHub/src/authorize.html
+++ b/WordToGitHub/src/authorize.html
@@ -1,4 +1,4 @@
-﻿<!doctype>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="common-styles.css" />
 
     <!-- 2. Polyfill(s) for older browsers -->
-    <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
+    <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <!-- 3. SystemJS Configuration -->
