--- a/WordToGitHub/src/preview.html
+++ b/WordToGitHub/src/preview.html
@@ -1,4 +1,4 @@
-﻿<!doctype>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="common-styles.css" />
 
     <!-- 2. Load libraries & polyfill(s) -->
-    <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
+    <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <!-- 3. SystemJS Configuration -->
