updated basic routing configuration

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <word-to-github>
+    <app>
         <div class="ms-progress-component">
             <main class="ms-progress-component__main ms-fontColor-white">
                 <img class="ms-progress-component__logo" src="assets/images/logo.png" />
@@ -42,6 +42,6 @@
                 </div>
             </footer>
         </div>
-    </word-to-github>
+    </app>
 </body>
 </html>
