rolling back inherited init

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -12,7 +12,7 @@
     <!-- 1. Basic dependencies -->
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
-    <link rel="stylesheet" href="common-styles.css" />    
+    <link rel="stylesheet" href="common-styles.css" />
 
     <!-- 2. Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +20,7 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <!-- 3. SystemJS Configuration -->
+    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
     <script src="configuration.js"></script>
     <script type="text/javascript">
         useAppConfiguration();
