--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -17,10 +17,10 @@
     <!-- 2. Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <!-- 3. SystemJS Configuration -->
-    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
     <script src="configuration.js"></script>
     <script type="text/javascript">
         useAppConfiguration();
