--- a/WordToGitHub/src/authorize.html
+++ b/WordToGitHub/src/authorize.html
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 1. Basic dependencies -->
-    <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
+    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
