--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -11,7 +11,7 @@
 
     <!-- 1. Basic dependencies -->
     <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
     <link rel="stylesheet" href="common-styles.css" />
