--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <app>
+    <app class="app">
         <div class="ms-progress-component">
             <main class="ms-progress-component__main ms-fontColor-white">
                 <img class="ms-progress-component__logo" src="assets/images/logo.png" />
