Minor changes due to lists and to markdown

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -10,9 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 1. Basic dependencies -->
-    <script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>
+    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
     <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->
-    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
+    <script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
+<link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
     <link rel="stylesheet" href="common-styles.css" />
 
@@ -20,6 +21,7 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>
 
     <!-- 3. SystemJS Configuration -->
     <script src="configuration.js"></script>
