--- a/WordToGitHub/src/authorize.html
+++ b/WordToGitHub/src/authorize.html
@@ -11,7 +11,8 @@
 
     <!-- 1. Basic dependencies -->
     <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->
+    <script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
