--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
     <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
     <link rel="stylesheet" href="common-styles.css" />
+    <script src="assets/stringview.js"></script>
 
     <!-- 2. Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
