--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -13,6 +13,11 @@
     <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
     <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->
     <script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/underscore/underscore.js"></script>
+    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css">
+    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css">
+    <link rel="stylesheet" href="common-styles.css" />    
 </head>
 
 <body>
