adding notification components and modifying gulp watches

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href="/">
-    <title>Word to GitHub</title>
+    <title>Markdown Writer for Word</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
