optimizing webpack chunk generation

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -8,9 +8,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
+    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css" />    
+
     <!-- 1. Basic dependencies -->
     <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
-    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->
+    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->    
     <script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
