fixing loading of stringview.js

--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -18,6 +18,8 @@
     <script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
+    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>    
+    <script src="assets/scripts/stringview.js"></script>
 </head>
 
 <body>
