--- a/WordToGitHub/src/index.html
+++ b/WordToGitHub/src/index.html
@@ -19,10 +19,15 @@
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
-    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>
-    <script src="node_modules/applicationinsights-js/dist/ai.js"></script>
+    <script type="text/javascript">
+        var appInsights = window.appInsights || function (config) {
+            function r(config) { t[config] = function () { var i = arguments; t.queue.push(function () { t[config].apply(t, i) }) } } var t = { config: config }, u = document, e = window, o = "script", s = u.createElement(o), i, f; s.src = config.url || "https://az416426.vo.msecnd.net/scripts/a/ai.0.js"; u.getElementsByTagName(o)[0].parentNode.appendChild(s); try { t.cookie = u.cookie } catch (h) { } for (t.queue = [], i = ["Event", "Exception", "Metric", "PageView", "Trace", "Dependency"]; i.length;) r("track" + i.pop()); return r("setAuthenticatedUserContext"), r("clearAuthenticatedUserContext"), config.disableExceptionTracking || (i = "onerror", r("_" + i), f = e[i], e[i] = function (config, r, u, e, o) { var s = f && f(config, r, u, e, o); return s !== !0 && t["_" + i](config, r, u, e, o), s }), t
+        }({
+            instrumentationKey: "b53b11c3-3b87-42fa-aa58-68f00b9e407b"
+        });
 
-    <script src="assets/scripts/stringview.js"></script>
+        window.appInsights = appInsights;
+    </script>
 </head>
 
 <body>
@@ -42,6 +47,8 @@
             </footer>
         </div>
     </app>
-</body>
 
+    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>
+    <script src="assets/scripts/stringview.js"></script>
+</body>
 </html>
