--- a/MarkdownEditorForWord/src/index.html
+++ b/MarkdownEditorForWord/src/index.html
@@ -1,44 +1,36 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
-    <base href="/">
-    <title>Markdown Editor for Word</title>
+	<base href="/">
+	<title>Markdown Editor for Word</title>
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
-    <link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css" />    
-
-    <!-- 1. Basic dependencies -->
-    <!--<script src="https://oep.azurewebsites.net/preview/aprfork/office.js"></script>-->
-    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>-->    
-    <script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/underscore/underscore.js"></script>
-    <script src="node_modules/to-markdown/dist/to-markdown.js"></script>    
-    <script src="assets/scripts/stringview.js"></script>
+	<link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
+	<link rel="stylesheet" href="node_modules/office-ui-fabric/dist/css/fabric.min.css" />
 </head>
 
 <body>
-    <app class="app">
-        <div class="ms-progress-component">
-            <main class="ms-progress-component__main ms-fontColor-white">
-                <img class="ms-progress-component__logo" src="assets/images/logo.png" />
-                <h1 class="ms-progress-component__title ms-font-xl ms-fontColor-white ms-fontWeight-semibold">MARKDOWN EDITOR</h1>
-                <h2 class="ms-progress-component__title ms-font-l ms-fontColor-white ms-fontWeight-light">for Word</h2>
-            </main>
-            <footer class="ms-progress-component__footer ms-fontColor-white">
-                <div class="ms-progress">
-                    <div class="ms-Spinner large"></div>
-                    <div class="ms-ProgressIndicator-itemName">Loading</div>
-                    <div id="status" class="ms-ProgressIndicator-itemDescription">Fetching libraries</div>
-                </div>
-            </footer>
-        </div>
-    </app>
+	<app class="app">
+		<div class="ms-progress-component">
+			<main class="ms-progress-component__main ms-fontColor-white">
+				<img class="ms-progress-component__logo" src="assets/images/logo.png" />
+				<h1 class="ms-progress-component__title ms-font-xl ms-fontColor-white ms-fontWeight-semibold">MARKDOWN EDITOR</h1>
+				<h2 class="ms-progress-component__title ms-font-l ms-fontColor-white ms-fontWeight-light">for Word</h2>
+			</main>
+			<footer class="ms-progress-component__footer ms-fontColor-white">
+				<div class="ms-progress">
+					<div class="ms-Spinner large"></div>
+					<div class="ms-ProgressIndicator-itemName">Loading</div>
+					<div id="status" class="ms-ProgressIndicator-itemDescription">Fetching libraries</div>
+				</div>
+			</footer>
+		</div>
+	</app>
+	<script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
 </body>
 
 </html>
