--- a/MarkdownEditorForWord/src/index.html
+++ b/MarkdownEditorForWord/src/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -30,7 +30,11 @@
 			</footer>
 		</div>
 	</app>
-	<script src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
+	<script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="node_modules/underscore/underscore-min.js"></script>
+	<script src="assets/scripts/stringview.js"></script>
+	<script src="node_modules/to-markdown/dist/to-markdown.js"></script>
 </body>
 
 </html>
